--- a/spa/client/styles/type/fonts/latoLight.css
+++ b/spa/client/styles/type/fonts/latoLight.css
@@ -1,9 +1,9 @@
 @font-face {
     font-family: "Lato";
     src: local("Lato Light"),
-       url("../../assets/fonts/lato/latoLight.woff2") format("woff2"),
-       url("../../assets/fonts/lato/latoLight.woff") format("woff"),
-       url("../../assets/fonts/lato/latoLight.ttf") format("truetype");
+       url("../../../assets/fonts/latoLatinLight.woff2") format("woff2"),
+       url("../../../assets/fonts/latoLatinLight.woff") format("woff"),
+       url("../../../assets/fonts/latoLatinLight.ttf") format("truetype");
     font-weight: 200;
     font-style: normal;
 }
